experiment_output/error_log/nondex-thomaslee-gradle-jflex-plugin.log
warning: [options] source value 6 is obsolete and will be removed in a future release
warning: [options] target value 1.6 is obsolete and will be removed in a future release
warning: [options] To suppress warnings about obsolete options, use -Xlint:-options.
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task103/wd/NonDex-plugin-test/github.com/thomaslee/gradle-jflex-plugin/src/main/java/co/tomlee/gradle/plugins/jflex/JFlexVirtualSourceDirectoryImpl.java:14: error: no suitable constructor found for DefaultSourceDirectorySet(String,FileResolver)
        this.jflex = new DefaultSourceDirectorySet(displayName, fileResolver);
                     ^
    constructor DefaultSourceDirectorySet.DefaultSourceDirectorySet(String,String,FileResolver,DirectoryFileTreeFactory,ObjectFactory) is not applicable
      (actual and formal argument lists differ in length)
    constructor DefaultSourceDirectorySet.DefaultSourceDirectorySet(String,String,FileResolver,DirectoryFileTreeFactory) is not applicable
      (actual and formal argument lists differ in length)
    constructor DefaultSourceDirectorySet.DefaultSourceDirectorySet(String,FileResolver,DirectoryFileTreeFactory) is not applicable
      (actual and formal argument lists differ in length)
1 error
3 warnings

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 19s
